# portfolio

./: .gitignore  README.md
Allocators/: FreeListAllocator.h
BasicTriangle/D3D12/: build.bat  build_renderer.bat  build_shaders.bat  debug.bat  project.4coder  run.bat
BasicTriangle/D3D12/scripts/: machine.sh  setup_cl.bat
BasicTriangle/D3D12/src/: UnityBuild.cpp
Common/: README.md
Common/Core/: Core.h  SysMemory.h
Common/Util/: String.h
ECS/: .gitignore  CMakeLists.txt  README.md  run.bat
ECS/examples/: CMakeLists.txt  example.cpp
ECS/inc/: jackal_types.h
ECS/src/ecs/: CMakeLists.txt  component.cpp  component.h  ecs.cpp  ecs.h  entity.cpp  entity.h  system.cpp  system.h
ECS/src/mm/: CMakeLists.txt  allocator.h  allocator.inl  free_list_allocator.cpp  free_list_allocator.h  linear_allocator.cpp  linear_allocator.h  mm.cpp  mm.h  pool_allocator.cpp  pool_allocator.h  proxy_allocator.cpp  proxy_allocator.h  stack_allocator.cpp  stack_allocator.h
ECS/src/utils/: CMakeLists.txt  dynamic_array.h  linked_list.h
HeightmapCUDA/: README.md  build.bat  debug.bat  project.4coder  run.bat
HeightmapCUDA/data/shaders/: Passthrough.frag  Passthrough.vert
HeightmapCUDA/ext/: IconsForkAwesome.h
HeightmapCUDA/ext/imgui/: imgui.h  imgui_demo.cpp
HeightmapCUDA/scripts/: install_glfw.sh  machine.sh
HeightmapCUDA/src/: UnityBuild.cpp  UnityBuild.h
HeightmapCUDA/src/Core/: EngineCore.cpp  EngineCore.h  EngineCoreSettings.h  FrameParams.h  Serializer.h  SysMemory.cpp  SysMemory.h
HeightmapCUDA/src/Cuda/: CudaCommon.h  CudaCore.h  CudaInterop.cuh  CudaMath.h  CudaUnity.cu  CudaUtils.h  Init.cu  Perlin.cu  Sample.cu
HeightmapCUDA/src/Editor/: Editor.h
HeightmapCUDA/src/Platform/: ByteBuffer.cpp  ByteBuffer.h  Input.h  Platform.cpp  Platform.h  PlatformTypes.h  Timer.h
HeightmapCUDA/src/Renderer/: OpenGLImGui.cpp  OpenGLImGui.h  Shader.h  glad.c
HeightmapCUDA/src/Util/: FixedPoint.h  HandmadeMath.h  Memory.h  MemoryPool.h  StrPool.h  UString.h  stb_ds.h
LODTerrain/: .gitignore  LICENSE  Makefile  README.md  TODO.txt
LODTerrain/inc/: Application.h  Camera.h  LODMesh.h  Lighting.h  Mesh.h  OpenSimplexNoise.h  Renderer.h  Shader.h  Terrain.h  TerrainGenerator.h  appconfig.h
LODTerrain/lib/glad/: glad.h
LODTerrain/lib/glfwMac/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
LODTerrain/src/: AppSource.cpp  Application.cpp  LODApp.cpp  LODMesh.cpp  Lighting.cpp  Mesh.cpp  Renderer.cpp  Terrain.cpp  TerrainApp.cpp  TerrainGenerator.cpp  glad.c  main.cpp
LowPolyTerrainGen/: README.md  build.sh
LowPolyTerrainGen/src/: UnityBuild.c
PlatformApi/: ControlBindings.h  HostKey.h  HostWindow.h  Platform.h  README.md  Timer.h
PlatformApi/Win32/: Win32FileManager.cpp  Win32Logger.cpp  Win32Main.cpp  Win32ThreadPool.cpp  Win32Window.cpp
PlatformApi/X11/: X11Main.c
Raytracer/: README.md  build.bat  build.sh  debug.bat  project.4coder  run.bat  run.sh
Raytracer/src/: UnityBuild.cpp
Splicer/: .gitignore  README.md  build.bat  copy_resources.bat  debug.bat  full_build.bat
Splicer/Platform/: CMakeLists.txt  UnityBuild.cpp  build.bat  logger.h  platform.h  run.bat
Splicer/ext/: CMakeLists.txt  build.bat
Splicer/inc/: jackal_types.h
Splicer/splicer/: unity.cpp
(+225 files in other folders)
